--- a/test.html
+++ b/test.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practice Site</title>
     <link rel="stylesheet" href="test.css">
+    <link rel="shortcut icon" href="home_4556826.png" type="image/x-icon">
     
 </head>
 <body>
@@ -14,10 +15,25 @@
    <div class="mybutton"> <button class="bub" onclick="playGame('paper')">Paper</button></div>
    <div class="mybutton"><button class="bub" onclick="playGame('scissors')">Sissor</button></div>
     <div id="result"></div>
-    <div>Button</div>
  <br>
    <div id="computerchoice"></div>
    <script src="test.js" defer></script>
+  <div class="diivv"> <p class="insidediv">You are Doing Good</p></div>
+  <label for="name">Name:</label>
+  <input type="text" placeholder="your name">
+  <br>
+  <label for="password">Password:</label>
+  <input type="password" name="" id="" placeholder="password">
+  <br>
+  <label for="email">Email:</label>
+  <input type="email" placeholder="your email">
+  <br>
+  <label for="Date">Date:</label>
+  <input type="date" name="" id="" >
+  <br>
+  <input type="submit" value="submit">
+  <input type="button" value="Reset">
+  <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus unde iste sit ab saepe magnam. Iure vel <span id="spaan">accusantium</span> sapiente fugit aut ullam reprehenderit maiores harum repellendus id laborum, doloremque quisquam?</p>
    
 </body>
 </html>
